spacing fixed

--- a/src/navigation/navBar.css
+++ b/src/navigation/navBar.css
@@ -7,7 +7,6 @@
   color: blue;
 }
 .input-group-addon-btn {
-  padding: 0;
   border-radius: 20%;
 }
 button {
